--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: cir
 Type: Package
 Title: Centered-Isotonic-Regression and Dose-Response utilities
-Version: 1.1
+Version: 1.1.0
 Date: 2014-05-02
-Author: Assaf P. Oron
-Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
 Description: Isotonic regression, as well as a small-sample tweak called CIR, and some other goodies.
 License: GPL-2
+
+Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man')) roxygen2::roxygenize('.');
+    person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@seattlechildrens.org')
+    
   
