--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 1.1.0
 Date: 2014-05-02
 Description: Isotonic regression, as well as a small-sample tweak called CIR, and some other goodies.
 License: GPL-2
-
-Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man')) roxygen2::roxygenize('.');
+Author: Assaf P. Oron
+Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org'>
+Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man/cirPAVA.Rd')) roxygen2::roxygenize('.');
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@seattlechildrens.org')
     
   
