--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: cir
 Type: Package
 Title: Centered-Isotonic-Regression and Dose-Response utilities
 Version: 1.1.0
-Date: 2014-05-02
-Description: Isotonic regression, as well as a small-sample tweak called CIR, and some other goodies.
+Date: 2014-08-13
+Description: Isotonic regression, as well as a great small-sample tweak called CIR, and interval estimates for both.
 License: GPL-2
 Author: Assaf P. Oron
 Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
