--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Type: Package
 Title: Centered-Isotonic-Regression and Dose-Response utilities
 Version: 1.1.0
 Date: 2014-08-13
-Description: Isotonic regression, as well as a great small-sample tweak called CIR, and interval estimates for both.
+Description: Isotonic regression, as well as a great small-sample tweak called
+    CIR, and interval estimates for both.
 License: GPL-2
 Author: Assaf P. Oron
 Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
 Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man/cirPAVA.Rd')) roxygen2::roxygenize('.');
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@seattlechildrens.org')
-    
-  
+RoxygenNote: 5.0.1
