Starting to work on examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,DRtrace)
 S3method(plot,doseResponse)
+export(DRtrace)
 export(agcouCI)
 export(cirPAVA)
 export(deltaInverse)
@@ -10,6 +11,7 @@ export(doseResponse)
 export(is.DRtrace)
 export(is.doseResponse)
 export(isotInterval)
+export(iterCIR)
 export(jeffCI)
 export(morrisCI)
 export(oldPAVA)
@@ -17,4 +19,3 @@ export(quickInverse)
 export(quickIsotone)
 export(slope)
 export(wilsonCI)
-export(iterCIR)
