--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,12 @@ Package: cir
 Type: Package
 Title: Centered-Isotonic-Regression and Dose-Response utilities
 Version: 2.0.0
-Date: 2017-02-15
-Description: Isotonic regression, as well as a great small-sample tweak called
+Date: 2017-03-15
+Description: Isotonic regression (IR), a great small-sample improvement to IR called
     CIR, and interval estimates for both.
 License: GPL-2
 Author: Assaf P. Oron
 Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
 Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man/cirPAVA.Rd')) roxygen2::roxygenize('.');
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@seattlechildrens.org')
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
