--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: cir
 Type: Package
-Title: Centered-Isotonic-Regression and Dose-Response utilities
+Title: Centered Isotonic Regression and Dose-Response Utilities
 Version: 2.0.0
 Date: 2017-03-15
-Description: Isotonic regression (IR), a great small-sample improvement to IR called
-    CIR, and interval estimates for both.
+Description: Isotonic regression (IR), as well as a great small-sample improvement to IR called
+    CIR, interval estimates for both, and additional utilities.
 License: GPL-2
-Author: Assaf P. Oron
+Author: Assaf P. Oron [aut,cre]
 Maintainer: Assaf P. Oron <assaf.oron@seattlechildrens.org>
 Authors@R: if (file.exists('DESCRIPTION') && !file.exists('man/cirPAVA.Rd')) roxygen2::roxygenize('.');
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@seattlechildrens.org')
+
 RoxygenNote: 6.0.1
