--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,8 @@ Date: 2021-8-12
 Description: Isotonic regression (IR) and its improvement: centered isotonic regression (CIR). CIR is recommended in particular with small samples. Also, interval estimates for both, and additional utilities such as plotting dose-response data.
 License: GPL-2
 Authors@R:
-    person('Assaf P.','Oron', role=c('cre','aut'), email='aoron@idmod.org')
+    person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@gmail.com')
 RoxygenNote: 7.1.1
 Encoding: UTF-8
+VignetteBuilder: knitr
+Suggests: knitr, rmarkdown
