Fixin' the methods to be upndown-compatible

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: cir
 Type: Package
 Title: Centered Isotonic Regression and Dose-Response Utilities
-Version: 2.2.1
-Date: 2022-07-04
+Version: 2.2.2
+Date: 2022-12-31
 Description: Isotonic regression (IR) and its improvement: centered isotonic regression (CIR). CIR is recommended in particular with small samples. Also, interval estimates for both, and additional utilities such as plotting dose-response data.
 License: GPL-2
 Authors@R:
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@gmail.com')
 RoxygenNote: 7.2.0
+Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
 VignetteBuilder: knitr
 Suggests: knitr, rmarkdown
