Trying to finalize 2.3.1 (work on examples)
Simulations for latest interval tweak checked out.
Now just cleaning up and refreshing some of the examples and vignette text.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: cir
 Type: Package
 Title: Centered Isotonic Regression and Dose-Response Utilities
 Version: 2.3.1
-Date: 2023-03-31
-Description: Isotonic regression (IR) and its improvement: centered isotonic regression (CIR). CIR is recommended in particular with small samples. Also, interval estimates for both, and additional utilities such as plotting dose-response data.
+Date: 2023-04-26
+Description: Isotonic regression (IR) and its improvement: centered isotonic regression (CIR). CIR is recommended in particular with small samples. Also, interval estimates for both, and additional utilities such as plotting dose-response data. For dev version and change history, see GitHub assaforon/cir.
 License: GPL-2
 Authors@R:
     person('Assaf P.','Oron', role=c('cre','aut'), email='assaf.oron@gmail.com')
